--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,27 @@ body {
 .container {
 
     background-color: white;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+}
+
+h1 {
+
+    text-align: center;
+    color: #4caf50;
+    margin-bottom: 30px;
 }
 
 .summary {
 
-    background-color: yellow
+   
+    display: grid;
+    grid-template-columns: 1fr fr 1fr;
+    gap: 15px;
+    margin-bottom: 30px;
 }
 .card {
 
-    background-color: pink
+   
 }
